@@ -175,28 +175,28 @@ class TestPrinter:
         assert event_obj['event'] == 'STATE_CHANGED'
         assert event_obj['state'] == 'ATTENTION'
         assert event_obj['source'] == 'WUI'
-        assert event_obj['data']['prepared'] is False
+        assert event_obj['data']['ready'] is False
 
-        printer.set_state(const.State.READY, const.Source.HW, prepared=True)
+        printer.set_state(const.State.IDLE, const.Source.HW, ready=True)
         item = printer.queue.get_nowait()
         assert isinstance(item, Event)
         event_obj = item.to_payload()
-        assert event_obj['state'] == 'READY'
-        assert event_obj['data']['prepared'] is True
+        assert event_obj['state'] == 'IDLE'
+        assert event_obj['data']['ready'] is True
 
         printer.set_state(const.State.PRINTING, const.Source.SERIAL)
         item = printer.queue.get_nowait()
         assert isinstance(item, Event)
         event_obj = item.to_payload()
         assert event_obj['state'] == 'PRINTING'
-        assert event_obj['data']['prepared'] is False
+        assert event_obj['data']['ready'] is False
 
         printer.set_state(const.State.FINISHED, const.Source.FIRMWARE)
         item = printer.queue.get_nowait()
         assert isinstance(item, Event)
         event_obj = item.to_payload()
         assert event_obj['state'] == 'FINISHED'
-        assert event_obj['data']['prepared'] is False
+        assert event_obj['data']['ready'] is False
 
     def test_loop(self, requests_mock, printer):
         requests_mock.post(SERVER + "/p/events", status_code=204)
@@ -1006,7 +1006,7 @@ class TestPrinter:
         with pytest.raises(queue.Empty):
             printer.queue.get_nowait()
 
-    def test_set_printer_prepared(self, printer, requests_mock):
+    def test_set_printer_ready(self, printer, requests_mock):
         cmd = '{"command":"SET_PRINTER_PREPARED"}'
         requests_mock.post(SERVER + "/p/telemetry",
                            text=cmd,
@@ -1023,7 +1023,7 @@ class TestPrinter:
         printer.command()
         run_loop(printer.loop, timeout=0.2)
 
-        assert printer.state == const.State.PREPARED
+        assert printer.state == const.State.READY
         assert str(requests_mock.request_history[2]) == \
                f"POST {SERVER}/p/events"
         event = requests_mock.request_history[2].json()
